2008-11-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (EVENTS-QUEUED): add (call XEventsQueued)
	* modules/clx/new-clx/clx.lisp (EVENTS-QUEUED): export

2008-11-08  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (SOCKADDR-FAMILY):
	return family as a keyword

2008-11-08  Sam Steingold  <sds@gnu.org>

	* predtype.d (with_gc_statistics): avoid a format argument type
	mismatch warning

2008-11-08  Sam Steingold  <sds@gnu.org>

	* errunix.d (errno_out_low): avoid
	"warning: format not a string literal and no format arguments"

2008-11-07  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:OPEN-DISPLAY): fix the signature
	and a segfault in (XLIB:OPEN-DISPLAY NIL); use grasp()
	(DISPLAY-AUTHORIZATION): move STACK_to_mv past X_CALL
	(CREATE-WINDOW): use macro SLOT
	(get_event_mask): define as check_event_mask_of_list
	(make_event_mask): define as make_uint32
	(CREATE-PIXMAP, PROCESS-EVENT): use error_required_keywords()
	instead of NOTIMPLEMENTED
	(SEND-EVENT): fix the signature and use grasp()
	(dpy_wait): add
	(travel_queque, EVENT-LISTEN): use it
	(get_window_0, get_cursor_0): add
	(GRAB-POINTER, CHANGE-ACTIVE-POINTER-GRAB, GRAB-BUTTON):
	use them, thus treat NIL and UNBOUND the same: as None

2008-11-06  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (COPY-GCONTEXT-COMPONENTS):
	fix handling of the &rest arguments

2008-11-06  Sam Steingold  <sds@gnu.org>

	save "delegating" executable images which only parse --clisp* args
	* pathname.d (SAVEMEM): second argument EXECUTABLE can be 0 to
	mean delegate all command line options to the INIT-FUNCTION,
	only parse --clisp - prefixed options
	* spvw.d (usage): accept delegating argument
	(delegating_cookie, delegating_cookie_length, delegating_p): add
	(parse_options): when delegating_p returns true, only handle
	options prefixed with --clisp
	* spvw_memfile.d (savemem): second argument is a uintL, not a bool
	(find_marker): always present